--- a/ECommerceSample/Views/Shared/_Layout.cshtml
+++ b/ECommerceSample/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="product" asp-controller="Tag" asp-action="Index">Tag</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="product" asp-controller="product" asp-action="Index">Product</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
