--- a/ECommerceSample/Areas/Product/Views/Product/Update.cshtml
+++ b/ECommerceSample/Areas/Product/Views/Product/Update.cshtml
@@ -1,16 +1,19 @@
-﻿@model ECommerceSample.Areas.Product.ViewModel.ProductCreateViewModel
+﻿@model ECommerceSample.Areas.Product.ViewModel.ProductUpdateViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Update</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-action="Create"  enctype="multipart/form-data">
+        <form method="post" asp-action="Update"  enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="OldImage" />
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -24,8 +27,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Image</label>
-                <input name="file" type="file" accept="image/*" enctype="multipart/form-data" class="form-control" required />
-                <span name="file" id="image" class="text-danger"></span>
+                <input name="file" type="file" accept="image/*" enctype="multipart/form-data" class="form-control" />
             </div>
             <div class="form-group">
                 <label class="control-label">Brand</label>
@@ -65,7 +67,7 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
     </div>
