--- a/ECommerceSample/Areas/Product/Views/Tag/Update.cshtml
+++ b/ECommerceSample/Areas/Product/Views/Tag/Update.cshtml
@@ -5,34 +5,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Update</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form id="UpdateForm">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" readonly="readonly" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+<div class="container-fluid">
+    <div class="row mt-3">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <b>Update Tag</b>
+                </div>
+                <div class="card-body">
+                   <form id="UpdateForm" method="post">
+                       <input type="hidden" asp-for="Id" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label">Name</label>
+                    <input asp-for="Name" class="form-control" required/>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Update" class="btn btn-primary" />
+                    <a asp-action="Index" class="btn btn-success">Back to List</a>
+                </div>
+            </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label required"></label>
-                <input asp-for="Name" required="required" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
     @{
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
@@ -60,7 +59,8 @@
 
            },
            error: function(e){
-               alert("Error "+e.responseJSON.title+" ("+e.responseJSON.status+")");
+               console.log(e);
+               alert("Error "+e.responseText+" ("+e.status+")");
            }
         });
     });
