--- a/ECommerceSample/Views/Shared/_IdentityLayout.cshtml
+++ b/ECommerceSample/Views/Shared/_IdentityLayout.cshtml
@@ -18,7 +18,7 @@
     </nav>
     <main>
         <div class="container">
-            @RenderBody();
+            @RenderBody()
 
         </div>
     </main>
