--- a/ECommerceSample/Areas/Product/Views/Category/Create.cshtml
+++ b/ECommerceSample/Areas/Product/Views/Category/Create.cshtml
@@ -4,34 +4,38 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Create</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form id="CreateForm">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label required"></label>
-                <input asp-for="Name" required="required" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<div class="container-fluid">
+    <div class="row mt-3">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <b>Create Category</b>
+                </div>
+                <div class="card-body">
+                   <form id="CreateForm" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label">Name</label>
+                    <input asp-for="Name" class="form-control" required/>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <a asp-action="Index" class="btn btn-success">Back to List</a>
+                </div>
+            </form>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
     @{
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+    }
+
+
 <script>
     $("#CreateForm").submit(function (e){
         e.preventDefault();
@@ -49,7 +53,6 @@
            data : JSON.stringify(data),
            contentType: "application/json",
            success : function (e){
-               console.log(e);
                alert("Created Successfully with id ("+e.id+")");
                window.location = ("/product/category");
            },
