--- a/ECommerceSample/Areas/Product/Views/Category/Index.cshtml
+++ b/ECommerceSample/Areas/Product/Views/Category/Index.cshtml
@@ -5,38 +5,44 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Category</h1>
+<div class="container">
+    <div class="row mt-2">
+        <div class="col-md-12">
 
-<p>
-    <a class="btn btn-primary" asp-controller="Category" asp-area="Product" asp-action="Create">Add</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                Name
-            </th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.Id
-                </td>
-                <td>
-                    @item.Name
-                </td>
-                <td>
-                    <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Update</a>
+            <h2 class="text-center">Category</h2>
+        </div>
+    </div>
+    <p>
+        <a class="btn btn-success" asp-controller="Category" asp-area="Product" asp-action="Create">Add</a>
+    </p>
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table table-striped table-bordered" id="data-table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @item.Id
+                            </td>
+                            <td>
+                                @item.Name
+                            </td>
+                            <td>
+                                <a asp-action="Update" asp-route-id="@item.Id" class="btn btn-primary">Update</a>
 
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
