--- a/ECommerceSample/Views/Shared/_Layout.cshtml
+++ b/ECommerceSample/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
         </div>
         <div id="layoutSidenav_content">
             <main>
-                @RenderBody();
+                @RenderBody()
             </main>
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
