Add details page

--- a/ECommerceSample/wwwroot/css/site.css
+++ b/ECommerceSample/wwwroot/css/site.css
@@ -10,6 +10,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
@@ -616,7 +617,7 @@ progress {
 }
 
     .blockquote-footer::before {
-        content: "— ";
+        content: "ï¿½ï¿½";
     }
 
 .img-fluid {
@@ -2197,7 +2198,9 @@ progress {
         -webkit-overflow-scrolling: touch;
     }
 }
-
+.form-group {
+    margin-bottom: 10px;
+}
 .form-label {
     margin-bottom: 0.5rem;
 }
